--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 GOOGLE_GENERATIVE_AI_API_KEY=****
 OPENAI_API_KEY=****
+XAI_API_KEY=****
+ANTHROPIC_API_KEY=****
 POSTGRES_URL=postgres://postgres:postgres@localhost:5432/chatbot
 FILEBASE_URL=file:node_modules/local.db
 USE_FILE_SYSTEM_DB=true
