Remove copy-env.ts script and update package.json to reference new script location; add rimraf dependency for improved cleanup tasks.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:next": "next lint",
     "lint": "biome lint --write --unsafe ./src",
     "format": "biome format --write",
-    "initial": "tsx copy-env.ts && pnpm db:generate && pnpm db:push",
+    "initial": "tsx scripts/copy-env.ts && pnpm db:generate && pnpm db:push",
+    "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
     "db:reset": "drizzle-kit drop && drizzle-kit push",
     "db:push": "drizzle-kit push",
@@ -84,6 +85,7 @@
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.4",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
