Refactor MCP configuration management by renaming mcp.config.json to .mcp-config.json, updating related documentation, and modifying package.json scripts for improved setup clarity.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:next": "next lint",
     "lint": "biome lint --write --unsafe ./src",
     "format": "biome format --write",
-    "initial": "tsx scripts/copy-env.ts && pnpm db:generate && pnpm db:push",
+    "initial:env": "tsx scripts/copy-env.ts",
+    "initial:mcp-config": "tsx scripts/generate-mcp-config.ts",
+    "initial:db": "pnpm db:generate && pnpm db:push",
+    "initial": "pnpm initial:env && pnpm initial:mcp-config && pnpm initial:db",
     "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
     "db:reset": "drizzle-kit drop && drizzle-kit push",
