--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.7",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.2.2",
     "sonner": "^2.0.3",
