패키지에 @radix-ui/react-accordion 추가 및 관련 종속성 업데이트. 앱 상태에 activeTool 속성 추가 및 관련 컴포넌트 수정. MCP 도구 목록과 세부 정보 팝업 컴포넌트 구현. 불필요한 mcp-tool-select 컴포넌트 삭제.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ai-sdk/xai": "^1.2.13",
     "@libsql/client": "^0.15.4",
     "@modelcontextprotocol/sdk": "^1.10.1",
+    "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.8",
     "@radix-ui/react-dropdown-menu": "^2.1.8",
