--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "pnpm initial:check && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "test": "vitest",
     "lint:next": "next lint",
     "lint": "biome lint --write --unsafe ./src",
     "format": "biome format --write",
+    "initial:check": "tsx scripts/flag.ts check",
     "initial:env": "tsx scripts/copy-env.ts",
     "initial:mcp-config": "tsx scripts/generate-mcp-config.ts",
     "initial:db": "pnpm db:generate && pnpm db:push",
-    "initial": "pnpm initial:env && pnpm initial:mcp-config && pnpm initial:db",
+    "initial:flag-generate": "tsx scripts/flag.ts generate",
+    "initial": "pnpm install && pnpm initial:env && pnpm initial:mcp-config && pnpm initial:db && pnpm initial:flag-generate",
     "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
     "db:reset": "drizzle-kit drop && drizzle-kit push",
@@ -47,6 +49,10 @@
     "@radix-ui/react-switch": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.1",
+    "@tiptap/extension-mention": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/suggestion": "^2.11.7",
     "ai": "^4.3.9",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
