--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "db:check": "drizzle-kit check"
   },
   "dependencies": {
+    "@ai-sdk-tool/parser": "^1.0.2",
     "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/google": "^1.2.11",
     "@ai-sdk/openai": "^1.3.16",
