--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "db:check": "drizzle-kit check"
   },
   "dependencies": {
+    "@ai-sdk-tool/parser": "^1.0.0",
     "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/google": "^1.2.11",
     "@ai-sdk/openai": "^1.3.16",
@@ -75,7 +76,6 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
-    "relaxed-json": "^1.0.3",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.2.2",
     "sonner": "^2.0.3",
