add sqlite project schema

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "db:reset": "drizzle-kit drop && drizzle-kit push",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:migrate": "drizzle-kit migrate",
+    "db:migrate": "tsx src/lib/db/migrate.sqlite.ts",
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check"
   },
