Update initial command in package.json to include database migration and increment version number in flag.ts to 0.0.5.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "initial:check": "tsx scripts/flag.ts check",
     "initial:env": "tsx scripts/copy-env.ts",
     "initial:mcp-config": "tsx scripts/generate-mcp-config.ts",
-    "initial:db": "pnpm db:generate && pnpm db:push",
     "initial:flag-generate": "tsx scripts/flag.ts generate",
-    "initial": "pnpm install && pnpm initial:env && pnpm initial:mcp-config && pnpm initial:db && pnpm initial:flag-generate",
+    "initial": "pnpm install && pnpm initial:env && pnpm initial:mcp-config && pnpm db:migrate && pnpm initial:flag-generate",
     "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
     "db:reset": "drizzle-kit drop && drizzle-kit push",
