Enhance chat functionality by adding annotations to ChatMessage, updating database schemas for SQLite and PostgreSQL, and implementing type checks. Introduce a new check-types script in package.json. Update version in flag.ts to 0.0.6. Refactor message handling in UserMessagePart to support tool mentions highlighting.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:next": "next lint",
     "lint": "biome lint --write --unsafe ./src",
     "format": "biome format --write",
+    "check-types": "tsc --noEmit",
     "initial:check": "tsx scripts/flag.ts check",
     "initial:env": "tsx scripts/copy-env.ts",
     "initial:mcp-config": "tsx scripts/generate-mcp-config.ts",
