Refactor ToolsList component to remove unused serverName prop, update noUnusedVariables rule to error in biome.json, and improve type handling in various components by renaming event parameters for clarity.

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,7 @@
       "recommended": false,
       "complexity": { "noUselessTypeConstraint": "error" },
       "correctness": {
-        "noUnusedVariables": "off",
+        "noUnusedVariables": "error",
         "useArrayLiterals": "off",
         "useExhaustiveDependencies": "off"
       },
