Refactor linting scripts in package.json to separate biome and next lint commands, ensuring a clearer linting process.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start",
     "test": "vitest",
     "lint:next": "next lint",
-    "lint": "biome lint --write --unsafe ./src",
+    "lint:biome": "biome lint --write --unsafe ./src",
+    "lint": "pnpm lint:biome && pnpm lint:next",
     "format": "biome format --write",
     "check-types": "tsc --noEmit",
     "initial:check": "tsx scripts/flag.ts check",
