Refactor cache implementation to use a unified key format, update cache interface for improved type safety, and enhance project instruction handling in actions. Add test execution step in CI workflow and update biome.json to ignore TypeScript declaration files.

--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules", ".next", "public", "docker", "dist/**"]
+    "ignore": ["node_modules", ".next", "public", "docker", "dist/**", "*.d.ts"]
   },
   "formatter": {
     "enabled": true,
