Update build script in package.json to clean .next directory before building with Next.js for improved build consistency.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm initial:check && next dev --turbopack",
-    "build": "next build",
+    "build": "rimraf .next && pnpm next build",
     "start": "next start",
     "test": "vitest",
     "lint:next": "next lint",
