--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mcp-client-chatbot",
   "version": "0.1.0",
   "private": true,
+  "author": "cgoing",
   "license": "MIT",
   "type": "module",
   "scripts": {
