--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ ANTHROPIC_API_KEY=****
 POSTGRES_URL=postgres://postgres:postgres@localhost:5432/chatbot
 FILEBASE_URL=file:node_modules/local.db
 USE_FILE_SYSTEM_DB=true
+AUTH_SECRET="****" # Added by `npx auth`. Read more: https://cli.authjs.dev
