--- a/package.json
+++ b/package.json
@@ -109,6 +109,6 @@
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
-    "node": ">=20.0.0"
+    "node": "^18.0.0 || ^20.0.0 || ^22.0.0"
   }
 }
