--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@ai-sdk-tool/parser": "^1.0.2",
     "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/google": "^1.2.14",
-    "@ai-sdk/openai": "^1.3.20",
-    "@ai-sdk/react": "^1.2.9",
+    "@ai-sdk/openai": "^1.3.21",
+    "@ai-sdk/react": "^1.2.11",
     "@ai-sdk/xai": "^1.2.15",
     "@libsql/client": "^0.15.4",
-    "@modelcontextprotocol/sdk": "^1.10.2",
+    "@modelcontextprotocol/sdk": "^1.11.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-hover-card": "^1.1.11",
@@ -52,11 +53,11 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@tiptap/extension-mention": "^2.11.7",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
-    "@tiptap/suggestion": "^2.11.7",
-    "ai": "^4.3.10",
+    "@tiptap/extension-mention": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
+    "@tiptap/suggestion": "^2.11.9",
+    "ai": "^4.3.13",
     "bcrypt-ts": "^7.0.0",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
@@ -67,7 +68,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^12.9.2",
+    "framer-motion": "^12.9.4",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.486.0",
     "nanoid": "^5.1.5",
@@ -85,23 +86,23 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "ts-safe": "^0.0.5",
-    "tw-animate-css": "^1.2.8",
+    "tw-animate-css": "^1.2.9",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20.17.32",
     "@types/pg": "^8.11.14",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "drizzle-kit": "^0.30.6",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.3.0",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
