--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "tailwind-merge": "^3.2.0",
     "ts-safe": "^0.0.5",
     "tw-animate-css": "^1.2.9",
+    "vaul": "^1.1.2",
     "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5",
     "zustand": "^5.0.4"
