--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   },
   "dependencies": {
     "@ai-sdk-tool/parser": "^1.0.2",
-    "@ai-sdk/anthropic": "^1.2.10",
-    "@ai-sdk/google": "^1.2.14",
-    "@ai-sdk/openai": "^1.3.21",
-    "@ai-sdk/react": "^1.2.11",
-    "@ai-sdk/xai": "^1.2.15",
-    "@libsql/client": "^0.15.4",
+    "@ai-sdk/anthropic": "^1.2.11",
+    "@ai-sdk/google": "^1.2.17",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/xai": "^1.2.16",
+    "@libsql/client": "^0.15.5",
     "@modelcontextprotocol/sdk": "^1.11.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
@@ -58,7 +58,7 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
-    "ai": "^4.3.13",
+    "ai": "^4.3.15",
     "bcrypt-ts": "^7.0.0",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
@@ -69,7 +69,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^12.9.7",
+    "framer-motion": "^12.10.5",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.486.0",
     "nanoid": "^5.1.5",
@@ -83,7 +83,8 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
-    "shiki": "^3.3.0",
+    "server-only": "^0.0.1",
+    "shiki": "^3.4.0",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
@@ -96,16 +97,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^20.17.39",
-    "@types/pg": "^8.12.0",
-    "@types/react": "^19.1.2",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@types/node": "^20.17.46",
+    "@types/pg": "^8.15.1",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.0",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
