--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "initial:mcp-config": "tsx scripts/generate-mcp-config.ts",
     "initial:flag-generate": "tsx scripts/flag.ts generate",
     "initial": "pnpm install && pnpm initial:env && pnpm initial:mcp-config && pnpm db:migrate && pnpm initial:flag-generate",
+    "postinstall": "tsx scripts/vercelPostinstall.ts",
     "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
     "db:reset": "drizzle-kit drop && drizzle-kit push",
@@ -115,5 +116,14 @@
   "packageManager": "pnpm@10.2.1",
   "engines": {
     "node": "^18.0.0 || ^20.0.0 || ^22.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
