feat: add local build script and update README for local testing instructions; enhance middleware secure cookie handling based on deployment environment

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ POSTGRES_URL=postgres://postgres:postgres@localhost:5432/chatbot
 FILEBASE_URL=file:node_modules/local.db
 USE_FILE_SYSTEM_DB=true
 AUTH_SECRET="****" # Added by `npx auth`. Read more: https://cli.authjs.dev
+AUTH_TRUST_HOST=true
