Feat: Add vercel deployment and docker

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "pnpm initial:check && next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "NEXT_START=1 next start",
     "test": "vitest",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
