feat: add remark-gfm for table / footnote support

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "shiki": "^3.4.2",
     "sonner": "^2.0.3",
