Refactor environment configuration and update database migration scripts. Removed Vercel-specific checks, streamlined Docker environment variables, and added a new table for MCP server configurations in the database.

--- a/compose.yml
+++ b/compose.yml
@@ -1,17 +1,16 @@
-
 services:
   mcp-client-chatbot:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - '3000:3000'
     environment:
-      - NEXT_START=1
-      - DOCKER=1
+      - AUTH_TRUST_HOST=true
+      - NO_HTTPS=local
     env_file:
       - .env
     dns:
-      - 8.8.8.8  # Google's public DNS server
-      - 8.8.4.4  # Google's public DNS server
+      - 8.8.8.8 # Google's public DNS server
+      - 8.8.4.4 # Google's public DNS server
     restart: unless-stopped
