--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "dev": "pnpm initial:check && next dev --turbopack",
     "build": "next build",
-    "start": "NEXT_START=1 next start",
-    "build:local": "cross-env DEPLOY_ENV=local next build",
+    "start": "next start",
+    "build:local": "cross-env NO_HTTPS=local AUTH_TRUST_HOST=true next build",
     "test": "vitest",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
@@ -37,7 +37,6 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.16",
-    "@libsql/client": "^0.15.6",
     "@modelcontextprotocol/sdk": "^1.11.3",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
