Update environment variable handling for local development. Changed NO_HTTPS from 'local' to 'true' in compose.yml and package.json, and adjusted middleware logic accordingly.

--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
       - '3000:3000'
     environment:
       - AUTH_TRUST_HOST=true
-      - NO_HTTPS=local
+      - NO_HTTPS=true
     env_file:
       - .env
     dns:
