--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "pnpm initial:check && next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "build:local": "cross-env NO_HTTPS=local AUTH_TRUST_HOST=true next build",
+    "build:local": "cross-env NO_HTTPS=true AUTH_TRUST_HOST=true next build",
     "test": "vitest",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
