--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,8 @@ services:
     dns:
       - 8.8.8.8 # Google's public DNS server
       - 8.8.4.4 # Google's public DNS server
+  #  networks:
+  #     - mcp_client_network 
     restart: unless-stopped
 
   # postgres:
@@ -22,8 +24,7 @@ services:
   #     POSTGRES_USER: your_username
   #     POSTGRES_PASSWORD: your_password
   #   networks:
-  #     - mcp_client_network # Assuming you have a defined network called 'mcp_network'
-  #   volumes:
+  #     - mcp_client_network 
   #     - postgres_data:/var/lib/postgresql/data
 
 # volumes:
