--- a/package.json
+++ b/package.json
@@ -117,7 +117,5 @@
     "vitest": "^3.1.3"
   },
   "packageManager": "pnpm@10.2.1",
-  "engines": {
-    "node": "^18.0.0 || ^20.0.0 || ^22.0.0"
-  }
+  "node": ">=18"
 }
