--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,8 +1,8 @@
 services:
   mcp-client-chatbot:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: ./docker/Dockerfile
     ports:
       - '3000:3000'
     environment:
@@ -15,6 +15,8 @@ services:
       - 8.8.4.4 # Google's public DNS server
     networks:
       - mcp_client_network
+    depends_on:
+      - postgres
     restart: unless-stopped
 
   postgres:
