chore: update environment configuration to use .env.local and adjust related scripts and Docker settings

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "build:local": "cross-env NO_HTTPS=true AUTH_TRUST_HOST=true next build",
+    "build:local": "cross-env NO_HTTPS='1' next build",
     "test": "vitest",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
     "format": "biome format --write",
     "check-types": "tsc --noEmit",
-    "initial:env": "tsx scripts/copy-env.ts",
+    "copy:env": "tsx scripts/copy-env.ts",
     "postinstall": "tsx scripts/postinstall.ts",
     "clean": "tsx scripts/clean.ts",
     "db:generate": "drizzle-kit generate",
@@ -25,11 +25,11 @@
     "db:migrate": "tsx scripts/db-migrate.ts",
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
-    "docker-compose:up": "cd docker && docker-compose up -d --build ",
-    "docker-compose:down": "cd docker && docker-compose down",
-    "docker-compose:logs": "cd docker && docker-compose logs -f",
-    "docker-compose:ps": "cd docker && docker-compose ps ",
-    "docker-compose:update": "git pull && cd docker && docker-compose up -d --build"
+    "docker-compose:up": "docker-compose -f docker/compose.yml up -d --build",
+    "docker-compose:down": "docker-compose -f docker/compose.yml down",
+    "docker-compose:logs": "docker-compose -f docker/compose.yml logs -f",
+    "docker-compose:ps": "docker-compose -f docker/compose.yml ps",
+    "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build"
   },
   "dependencies": {
     "@ai-sdk-tool/parser": "^1.0.2",
