--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -6,10 +6,9 @@ services:
     ports:
       - '3000:3000'
     environment:
-      - AUTH_TRUST_HOST=true
-      - NO_HTTPS=true
+      - NO_HTTPS='1'
     env_file:
-      - ../.env
+      - ../.env.local
     dns:
       - 8.8.8.8 # Google's public DNS server
       - 8.8.4.4 # Google's public DNS server
@@ -22,9 +21,9 @@ services:
   postgres:
     image: postgres:17
     environment:
-      POSTGRES_DB: your_database_name 
-      POSTGRES_USER: your_username    
-      POSTGRES_PASSWORD: your_password 
+      POSTGRES_DB: your_database_name
+      POSTGRES_USER: your_username
+      POSTGRES_PASSWORD: your_password
     networks:
       - mcp_client_network
     volumes:
