--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
 POSTGRES_URL=postgres://your_username:your_password@postgres:5432/your_database_name
 AUTH_SECRET="****" # Added by `npx auth secret`. Read more: https://cli.authjs.dev
+OPENROUTER_API_KEY=****
