chore: rename copy:env script to initial:env and update README for environment setup instructions

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ ANTHROPIC_API_KEY=****
 AUTH_SECRET="****" # Added by `npx auth secret`. Read more: https://cli.authjs.dev
 
 # If you don't have PostgreSQL running, use: pnpm docker:pg
-POSTGRES_URL=postgres://your_username:your_password@postgres:5432/your_database_name
+POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
