--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       - NO_HTTPS=1
     env_file:
-      - ../.env
+      - ../.env # root .env
+      - .env # docker .env
     dns:
       - 8.8.8.8 # Google's public DNS server
       - 8.8.4.4 # Google's public DNS server
@@ -20,10 +21,8 @@ services:
 
   postgres:
     image: postgres:17
-    environment:
-      POSTGRES_DB: your_database_name
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
+    env_file:
+      - .env # docker .env
     networks:
       - mcp_client_network
     volumes:
