Add better-auth package and implement basic authentication setup
- Added the better-auth package to package.json and pnpm-lock.yaml.
- Created auth-client.ts to initialize client-side authentication.
- Implemented basic email and password authentication in index.ts.

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@tiptap/suggestion": "^2.12.0",
     "ai": "^4.3.16",
     "bcrypt-ts": "^7.0.0",
+    "better-auth": "^1.2.8",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
