Refactor authentication setup to use better-auth package
- Updated .env.example to include BETTER_AUTH_SECRET.
- Replaced getToken with getSessionCookie in middleware for session management.
- Created new route for authentication using better-auth.
- Removed outdated NextAuth route and auth-client.ts.
- Added client.ts for initializing client-side authentication with better-auth.
- Enhanced auth configuration in index.ts to support better-auth features.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
 OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
-AUTH_SECRET="****" # Added by `npx auth secret`. Read more: https://cli.authjs.dev
+BETTER_AUTH_SECRET=
 
 # If you don't have PostgreSQL running, use: pnpm docker:pg
 POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
