Refactor authentication and user repository: simplify middleware session cookie handling, remove unused user registration logic, and clean up user repository methods. Update .env.example for better auth secret generation guidance.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
 OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
-BETTER_AUTH_SECRET=
+BETTER_AUTH_SECRET= # npx @better-auth/cli@latest secret
 
 # If you don't have PostgreSQL running, use: pnpm docker:pg
 POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
