Refactor authentication structure: update import paths for auth client and server, add new auth client and server modules, and modify .env.example to include DISABLE_SIGN_UP configuration for better authentication management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     ],
     "paths": {
       "ui/*": ["./src/components/ui/*"],
+      "auth/*": ["./src/lib/auth/*"],
       "app-types/*": ["./src/types/*"],
       "logger": ["./src/lib/logger.ts"],
       "lib/*": ["./src/lib/*"],
