--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ BETTER_AUTH_SECRET= # npx @better-auth/cli@latest secret
 # If you don't have PostgreSQL running, use: pnpm docker:pg
 POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
 FILE_BASED_MCP_CONFIG=false
+DISABLE_SIGN_UP=false
