Update authentication flow: add SignIn page, modify middleware to redirect to /sign-in, and update environment variables for Google and GitHub authentication. Adjust links in SignUp page and improve user sidebar display.

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,14 @@ XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
 OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
-BETTER_AUTH_SECRET= # npx @better-auth/cli@latest secret
+BETTER_AUTH_SECRET=**** # npx @better-auth/cli@latest secret
 
 # If you don't have PostgreSQL running, use: pnpm docker:pg
 POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
 FILE_BASED_MCP_CONFIG=false
-DISABLE_SIGN_UP=false
+
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
