--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,24 @@
+# === LLM Provider API Keys ===
+# Only provide the API keys for the LLM providers you plan to use.
 GOOGLE_GENERATIVE_AI_API_KEY=****
 OPENAI_API_KEY=****
 XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
 OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
-BETTER_AUTH_SECRET=**** # npx @better-auth/cli@latest secret
 
-# If you don't have PostgreSQL running, use: pnpm docker:pg
+# Secret for Better Auth (generate with: npx @better-auth/cli@latest secret)
+BETTER_AUTH_SECRET=****
+
+# === Database ===
+# If you don't have PostgreSQL running locally, start it with: pnpm docker:pg
 POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
+
+# Whether to use file-based MCP config (default: false)
 FILE_BASED_MCP_CONFIG=false
 
-
+# === OAuth Settings (Optional) ===
+# Fill in these values only if you want to enable Google/GitHub login
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
