Update README and .env.example: clarify API key instructions, enhance deployment links for Vercel, and improve documentation on chatbot features and environment variables.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # === LLM Provider API Keys ===
-# Only provide the API keys for the LLM providers you plan to use.
+# You only need to enter the keys for the providers you plan to use
 GOOGLE_GENERATIVE_AI_API_KEY=****
 OPENAI_API_KEY=****
 XAI_API_KEY=****
