Refactor OAuth environment variables: update .env.example and configuration files to use NEXT_PUBLIC prefix for Google and GitHub client IDs. Add OAuth setup guide to documentation for better user onboarding.

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ FILE_BASED_MCP_CONFIG=false
 
 # === OAuth Settings (Optional) ===
 # Fill in these values only if you want to enable Google/GitHub login
-GOOGLE_CLIENT_ID=
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GITHUB_CLIENT_ID=
+NEXT_PUBLIC_GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
