Refactor OAuth environment variable handling: remove NEXT_PUBLIC prefix from Google and GitHub client IDs in .env files and update related documentation. Adjust Docker configuration to use .env.docker for environment variables.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,6 +36,7 @@ COPY --from=builder /app/src/lib/utils.ts ./src/lib/utils.ts
 COPY --from=builder /app/src/lib/load-env.ts ./src/lib/load-env.ts
 COPY --from=builder /app/src/lib/db/migrations ./src/lib/db/migrations
 COPY --from=builder /app/src/types/chat.ts ./src/types/chat.ts
+COPY --from=builder /app/.env ./.env
 EXPOSE 3000
 
 CMD pnpm db:migrate && pnpm start
