--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "mermaid": "^11.6.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
     "pg": "^8.16.0",
