--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "cmdk": "^1.1.1",
     "consola": "^3.4.2",
     "date-fns": "^4.1.0",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "fast-deep-equal": "^3.1.3",
