chore: update package version to 1.5.1, add @changesets/cli dependency, and initialize changeset configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,6 +12,7 @@ compose.yml
 !.yarn/releases
 !.yarn/versions
 
+
 # testing
 /coverage
 
@@ -52,3 +53,4 @@ local-data
 *.ignore
 .mcp-config.json
 .next
+.changeset
