--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-client-chatbot",
-  "version": "0.1.0",
+  "version": "1.5.1",
   "private": true,
   "author": "cgoing",
   "license": "MIT",
@@ -104,6 +104,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@changesets/cli": "^2.29.4",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.17.50",
     "@types/pg": "^8.15.2",
