--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build",
     "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
     "changeset:add": "pnpx @changesets/cli",
-    "changeset:publish": "pnpx @changesets/cli version && pnpx @changesets/cli publish"
+    "changeset:version": "pnpx @changesets/cli version",
+    "changeset:release": "pnpx @changesets/cli release",
+    "changeset:publish": "pnpm changeset:version && pnpm changeset:release"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.11",
