chore: update version to 1.5.2 and add CHANGELOG for recent changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-client-chatbot",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "private": true,
   "author": "cgoing",
   "license": "MIT",
@@ -33,8 +33,8 @@
     "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
     "changeset:add": "pnpx @changesets/cli",
     "changeset:version": "pnpx @changesets/cli version",
-    "changeset:release": "pnpx @changesets/cli release",
-    "changeset:publish": "pnpm changeset:version && pnpm changeset:release"
+    "changeset:publish": "pnpx @changesets/cli publish",
+    "changeset:release": "pnpm changeset:version && pnpm changeset:publish"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.11",
