--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "docker-compose:ps": "docker-compose -f docker/compose.yml ps",
     "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build",
     "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
+    "changeset": "pnpx @changesets/cli",
     "changeset:add": "pnpx @changesets/cli",
-    "changeset:version": "pnpx @changesets/cli version",
-    "changeset:publish": "pnpx @changesets/cli publish",
-    "changeset:release": "pnpm changeset:version && pnpm changeset:publish"
+    "changeset:version": "pnpx @changesets/cli version"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.11",
