--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mcp-client-chatbot",
   "version": "1.5.2",
   "private": true,
-  "author": "cgoing",
+  "author": "cgoinglove",
   "license": "MIT",
   "type": "module",
   "scripts": {
