--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 20
 
       - name: Install Dependencies
-        run: pnpm i -D @changesets/cli
+        run: yarn add -D @changesets/cli
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
