--- a/.github/workflows/create-changeset-pr.yml
+++ b/.github/workflows/create-changeset-pr.yml
@@ -1,10 +1,9 @@
-name: Release
+name: Create Changeset PR
 
 on:
   push:
     branches:
       - main
-
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
@@ -12,8 +11,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  release:
-    name: Release
+  create-changeset-pr:
+    name: Create Changeset PR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -23,13 +22,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10.2.1
-
       - name: Install Dependencies
-        run: pnpm i -D @changesets/cli
+        run: np @changesets/cli
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
