chore: revert version to 1.5.1, remove CHANGELOG, and update workflows to use pnpm for dependency installation

--- a/.github/workflows/create-changeset-pr.yml
+++ b/.github/workflows/create-changeset-pr.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
@@ -17,14 +18,16 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-
       - name: Setup Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.2.1
       - name: Install Dependencies
-        run: np @changesets/cli
-
+        run: pnpm i -D @changesets/cli
       - name: Create Release Pull Request
         uses: changesets/action@v1
         env:
