--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     "docker-compose:logs": "docker-compose -f docker/compose.yml logs -f",
     "docker-compose:ps": "docker-compose -f docker/compose.yml ps",
     "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build",
-    "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
-    "changeset": "pnpx @changesets/cli",
-    "changeset:add": "pnpx @changesets/cli",
-    "changeset:version": "pnpx @changesets/cli version"
+    "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.11",
