Add permissions to PR check workflow for enhanced access control

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -3,6 +3,10 @@ name: PR Title Check
 on:
   pull_request:
     types: [opened, synchronize, reopened, edited]
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
 
 jobs:
   danger:
