--- a/package.json
+++ b/package.json
@@ -107,8 +107,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.17.50",
     "@types/pg": "^8.15.2",
@@ -119,6 +117,7 @@
     "eslint": "^9.27.0",
     "eslint-config-next": "15.3.0",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.7",
     "tsx": "^4.19.4",
@@ -126,6 +125,10 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
   },
+  "lint-staged": {
+    "*.{js,json,md,mjs,ts,yaml}": ["pnpm format", "pnpm lint:fix"]
+  },
+
   "packageManager": "pnpm@10.2.1",
   "engines": {
     "node": ">=18"
