feat(workflow): add HTTP node configuration and execution support
- Introduced HttpNodeConfig component for configuring HTTP requests.
- Implemented httpNodeExecutor for executing HTTP requests with dynamic parameters.
- Added validation for HTTP nodes to ensure proper configuration.
- Enhanced workflow interface to include HTTP node data structure.
- Updated utility functions to support HTTP value resolution and schema handling.
- Added new UI components for HTTP value input and variable selection.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build",
     "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
     "docker:app": "docker build -f docker/Dockerfile -t mcp-client-chatbot . && docker run -p 3000:3000 -e NO_HTTPS=1 mcp-client-chatbot",
-    "prepare": "husky"
+    "prepare": "husky",
+    "check": "pnpm lint:fix && pnpm check-types && pnpm test"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -133,10 +134,7 @@
     "vitest": "^3.2.3"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
