--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@ai-sdk/openai-compatible": "^0.2.14",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.16",
-    "@modelcontextprotocol/sdk": "^1.12.3",
+    "@modelcontextprotocol/sdk": "^1.13.2",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -65,14 +65,14 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tiptap/extension-mention": "^2.14.0",
-    "@tiptap/react": "^2.14.0",
-    "@tiptap/starter-kit": "^2.14.0",
-    "@tiptap/suggestion": "^2.14.0",
-    "@xyflow/react": "^12.7.0",
+    "@tiptap/extension-mention": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
+    "@tiptap/suggestion": "^2.23.0",
+    "@xyflow/react": "^12.8.1",
     "ai": "^4.3.16",
     "bcrypt-ts": "^7.1.0",
-    "better-auth": "^1.2.9",
+    "better-auth": "^1.2.12",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -80,28 +80,28 @@
     "consola": "^3.4.2",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.41.0",
-    "emoji-picker-react": "^4.12.2",
-    "framer-motion": "^12.18.1",
+    "emoji-picker-react": "^4.12.3",
+    "framer-motion": "^12.19.2",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "json-schema": "^0.4.0",
     "lucide-react": "^0.486.0",
-    "mermaid": "^11.6.0",
+    "mermaid": "^11.7.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
-    "next-intl": "^4.1.0",
+    "next-intl": "^4.3.1",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
-    "pg": "^8.16.0",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
-    "shiki": "^3.6.0",
+    "shiki": "^3.7.0",
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
@@ -109,35 +109,32 @@
     "ts-safe": "^0.0.5",
     "tw-animate-css": "^1.3.4",
     "vaul": "^1.1.2",
-    "zod": "^3.25.64",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.0",
+    "@types/node": "^20.19.2",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.6",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.0",
     "eslint-config-next": "15.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
