--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.22",
-    "@ai-sdk/openai": "^1.3.22",
-    "@ai-sdk/openai-compatible": "^0.2.14",
+    "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/openai-compatible": "^0.2.15",
     "@ai-sdk/react": "^1.2.12",
-    "@ai-sdk/xai": "^1.2.16",
+    "@ai-sdk/xai": "^1.2.17",
     "@modelcontextprotocol/sdk": "^1.15.0",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -70,7 +70,7 @@
     "@tiptap/starter-kit": "^2.25.0",
     "@tiptap/suggestion": "^2.25.0",
     "@xyflow/react": "^12.8.1",
-    "ai": "^4.3.16",
+    "ai": "^4.3.17",
     "bcrypt-ts": "^7.1.0",
     "better-auth": "^1.2.12",
     "chokidar": "^4.0.3",
@@ -83,11 +83,11 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.41.0",
     "emoji-picker-react": "^4.12.3",
-    "framer-motion": "^12.23.0",
+    "framer-motion": "^12.23.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "json-schema": "^0.4.0",
     "lucide-react": "^0.486.0",
-    "mermaid": "^11.8.0",
+    "mermaid": "^11.8.1",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
     "next-intl": "^4.3.4",
@@ -109,14 +109,14 @@
     "ts-safe": "^0.0.5",
     "tw-animate-css": "^1.3.5",
     "vaul": "^1.1.2",
-    "zod": "^3.25.74",
+    "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.4",
+    "@types/node": "^20.19.6",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -134,10 +134,7 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
