feat(agent): agent and archive  (#192)

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "docker-compose:logs": "docker-compose -f docker/compose.yml logs -f",
     "docker-compose:ps": "docker-compose -f docker/compose.yml ps",
     "docker-compose:update": "git pull && docker-compose -f docker/compose.yml up -d --build",
-    "docker:pg": "docker run --name mcp-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
+    "docker:pg": "docker run --name better-chatbot-pg -e POSTGRES_PASSWORD=your_password -e POSTGRES_USER=your_username -e POSTGRES_DB=your_database_name -p 5432:5432 -d postgres",
     "docker:app": "docker build -f docker/Dockerfile -t better-chatbot . && docker run -p 3000:3000 -e NO_HTTPS=1 better-chatbot",
     "prepare": "husky",
     "check": "pnpm lint:fix && pnpm check-types && pnpm test"
@@ -45,7 +45,7 @@
     "@ai-sdk/openai-compatible": "^0.2.16",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.18",
-    "@modelcontextprotocol/sdk": "^1.16.0",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -72,7 +72,7 @@
     "@xyflow/react": "^12.8.2",
     "ai": "^4.3.19",
     "bcrypt-ts": "^7.1.0",
-    "better-auth": "^1.3.3",
+    "better-auth": "^1.3.4",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -83,7 +83,7 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.41.0",
     "emoji-picker-react": "^4.13.2",
-    "framer-motion": "^12.23.9",
+    "framer-motion": "^12.23.10",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "json-schema": "^0.4.0",
     "lucide-react": "^0.486.0",
@@ -92,6 +92,7 @@
     "next": "15.3.2",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "ollama-ai-provider": "^1.2.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
@@ -107,7 +108,7 @@
     "tailwind-merge": "^3.3.1",
     "ts-edge": "^1.0.4",
     "ts-safe": "^0.0.5",
-    "tw-animate-css": "^1.3.5",
+    "tw-animate-css": "^1.3.6",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.6"
@@ -122,7 +123,7 @@
     "@types/react-dom": "^19.1.6",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.6",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-config-next": "15.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
